--- a/privacy_config.json
+++ b/privacy_config.json
@@ -1,7 +1,7 @@
 {
   "okay_button": {
-    "close_popup": true,
-    "open_url": false,
+    "close_popup": false,
+    "open_url": true,
     "url": "https://playonx.com/privacy"
   }
 }
